package msgs2s;
message PlayerSCData
{
	required uint32 guid = 1;
	required string name = 2;
	required uint32 type = 3;
	required uint32 sex = 4;
	required uint32 mapid = 5;
	required float  posx = 6;
	required float  posy = 7;
	required float  dir = 8;
	required uint32 city = 9;
	required uint32 head = 10;
}
message PlayerSSData
{
	required uint32 account = 1;
	required uint32 flag = 2;
	required uint32 createtime = 3; 
}

message PlayerInfo
{
	required PlayerSCData  sc_data = 1;
	required PlayerSSData  ss_data = 2;
}
message PlayerMail
{
	required uint32 mailid = 1;
	required uint32 sender = 2;
	required string senderName = 3;
	required uint32 reciver = 4;
	required uint32 mailtype = 5;
	required string content = 6;
	required uint32 flag = 7;
	required uint32 createtime = 8;
	
}
message PlayerRelation
{
	required uint32 guid = 1;
	required uint32 relation = 2;
	optional string mark = 3;
	required uint32 group = 4;
	required uint32 sex = 5;
	required string name = 6;
	required uint32 type = 7;
	required bool 	online = 8;
}
message PlayerInvite
{
	required uint32 guid = 1;
	required string name = 2;
	required uint32 group= 3;
}
